<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:text="@string/fragment_second"
        android:textSize="@dimen/main_header" />

    <EditText
        android:id="@+id/etInnerTemp"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@id/tvHeader"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/inner_temp" />

    <EditText
        android:id="@+id/etOuterTemp"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_below="@id/etInnerTemp"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/outer_temp" />

    <TextView
        android:id="@+id/tvCurrentDate"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/etOuterTemp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvCurrentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/tvCurrentDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnToThirdFragment"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentTime"
        android:layout_centerHorizontal="true"
        android:text="Next screen"/>


</RelativeLayout>